app/palette/css/style.css
/* ... */
.secondary-side-bar > ul.actions li:hover i {
    color: #D3D3D3;
}
.secondary-side-bar > ul.actions li a {
    line-height: 55px;
    width: 100%;
    display: block;
    font-size: 18px;
    color: #fff;
    font-weight: 500;
    vertical-align: top;
    position: relative;
    -webkit-transition: all 0.1s ease-in;
    -moz-transition: all 0.1s ease-in;
    -ms-transition: all 0.1s ease-in;
    -o-transition: all 0.1s ease-in;
    transition: all 0.1s ease-in;
    width: 100%;
    overflow: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
}
.secondary-side-bar ul.actions li a:active {
    background-color: rgba(0, 0, 0, 0.1);
    box-shadow: 0 -2px rgba(0, 0, 0, 0.1);
}
.secondary-side-bar ul.actions li.divider {
    height: 2px;
    display: block;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.1);
}
.dynamic-content {
    position: absolute;
    height: 100%;
    top: 67px;
    right: 0;
    left: 250px;
    padding: 0 15px 72px 18px;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -ms-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    overflow-y: scroll;
}
.dynamic-content.with-secondary-sidebar {
    left: 550px;
}
.home-events .dynamic-content.servers-visible {
    left: 550px;
}
.home-events .dynamic-content.collapsed {
    left: 60px;
}
.secondary-side-bar.servers-visible {
    left: 550px;
}
.secondary-side-bar.servers.servers-visible {
    left: 250px;
    border-right: 1px solid rgba(0,0,0,0.2);
}
.secondary-side-bar.collapsed.servers-visible {
    left: 360px;
}
.secondary-side-bar.servers.collapsed.servers-visible {
    left: 60px;
}
.dynamic-content.servers-visible {
    left: 550px;
}
.dynamic-content.collapsed.servers-visible {
    left: 550px;
}
.dynamic-content.servers-visible.collapsed {
    left: 660px;
}
.dynamic-content .top-zone {
    width: 100%;
    height: 120px;
}
.dynamic-content .top-zone .row {
    height: auto !important;
}
.dynamic-content .top-zone a.alert {
    font-size: 16px;
    margin: 0 0 25px 10px;
    display: inline-block;
    vertical-align: middle;
    position: relative;
    bottom: 0;
    padding: 0;
}
.dynamic-content .top-zone a.alert:hover {
    text-decoration: none;
}
.dynamic-content .top-zone a.alert:hover span {
    box-shadow: 0 0 0 9001px rgba(250, 250, 250, 0.2) inset;
}
.dynamic-content .top-zone a.alert span {
    display: inline-block;
    width: 24px;
    height: 24px;
    line-height: 24px;
    text-align: center;
    font-weight: 500;
    background-color: #ccc;
    color: #fff;
    border-radius: 50%;
}
.dynamic-content .top-zone a.alert.warnings {
    color: #DC994C;
}
.dynamic-content .top-zone a.alert.errors {
    color: #EF5455;
}
.dynamic-content .top-zone a.alert.warnings span {
    background-color: #DC994C;
}
.dynamic-content .top-zone a.alert.errors span {
    background-color: #EF5455;
}
.btn-group>.btn, .btn-group-vertical>.btn {
    padding-right: 45px;
}
.dynamic-content .top-zone .btn-group {
    float: left;
    display: inline-block;
    margin:10px 0 25px 10px;
}
.dynamic-content .top-zone .btn-group:first-of-type {
    margin-left: 0;
}
.dynamic-content .bottom-zone {
    padding-top: 20px;
}
.dynamic-content label {
    text-align: left;
}
.dynamic-content .key, .dynamic-content .label {
    display: inline;
    font-size: inherit;
    font-weight: 500;
    line-height: 1;
    color: #5F6670;
    text-align: left;
    overflow: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
    padding: 0;
}
.dynamic-content .key {
    padding: .25em .25em .25em 1em;
}
.dynamic-content .label {
    padding: 0 .25em 0 0;
}
.dynamic-content p.heading {
    width: 80%;
    font-weight: 500 !important;
    border-bottom: 3px solid #5F6670;
    padding: 10px 0 0 0;
    margin: 0;
}
.dynamic-content input[type="text"] {
    width: 50%;
}
.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
    background-color: #8D96A3;
    box-shadow: 0 0 0 9001px rgba(250,250,250,0.2) inset;
    color: #fff;
}
h1.page-title {
    font-size: 42px;
    display: inline-block;
    font-weight: 300;
    line-height: 32px;
    margin: 20px 0 25px 0;
    color: #697078;
    vertical-align: bottom;
}
#mainNav a.site-id {
    background-image: url('/app/module/palette/images/palette_logo_600dpi-2.png');
    background-size: 100%;
    background-position: 50%;
    position: absolute;
    left: 0;
    top: 0;
    display: block;
    height: 60px;
    width: 149px;
    box-sizing: content-box;
    background-repeat: no-repeat;
    margin-left: 15px;
}
nav img.site-id {
    color: #111111;
    margin-top: -5px;
    margin-right: 5px;
}
#mainNav .arrow-down {
    left: 7px;
    border-top: 7px solid #fff;
}
.text-center {
    text-align: center;
}
.text-left {
    text-align: left;
}
.text-small {
    font-size: 11px;
    font-weight: 500;
}
.green-light, .yellow-light, .orange-light, .red-light {
    width: 130px;
    height: 128px;
    margin: 10px auto;
    background: url(/app/module/palette/images/status-green-light.png);
    background-size: 100%;
    background-repeat: no-repeat;
}
.yellow-light {
    background: url(/app/module/palette/images/status-yellow-light.png);
    background-size: 100%;
}
.orange-light {
    background: url(/app/module/palette/images/status-orange-light.png);
    background-size: 100%;
}
.red-light {
    background: url(/app/module/palette/images/status-red-light.png);
    background-size: 100%;
}
.large {
    font-size: 2em;
}
p.large {
    margin: 0;
}
.spacer {
    margin: 0 60px 0 0;
}
.margin-top {
    margin-top: 12px !important;
}
/* ... */

